[package]
name = "aoc_22_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
linprog = "0.3.1"
nom = "7.1.3"
rayon = "1.8.0"
good_lp = { version = "*", features = ["minilp"], default-features = false }
